feat: Add image

--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
 	<title>inouefood</title>
 <html>
 <body>
-  <p>inouefoodはCreApp初のios開発チームです</p>
+	<div class="empty">
+	<p><br><br><br></p>
+	</div>
+	<div class="description">
+ 		<p>inoue foodはCreAppから生まれた<br>iOSアプリ開発チームです<br><br></p>
+ 	</div>
+ 	<div class="application">
+	 	<div class="natto">
+	 		<img src="img/natto.png" width=200 height=200>
+	  	</div>
+	 	<div class="ebifry">
+	 		<img src="img/ebifry.png" width=200 height=200>
+	 	</div>
+ 	</div>
 </body>
 </html>
