feat: Add image link

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 	<p><br><br><br></p>
 	</div>
 	<div class="description">
- 		<p>inoue foodはCreAppから生まれた<br>iOSアプリ開発チームです<br><br></p>
+ 		<p><br>inoue foodはCreAppから生まれた<br>iOSアプリ開発チームです<br><br></p>
  	</div>
  	<div class="application">
 	 	<div class="natto">
-	 		<img src="img/natto.png" width=200 height=200>
+	 		<a href="natto.html"><img src="img/natto.png" width=200 height=200></a>
 	  	</div>
 	 	<div class="ebifry">
-	 		<img src="img/ebifry.png" width=200 height=200>
+	 		<a href="ebifry.html"><img src="img/ebifry.png" width=200 height=200></a>
 	 	</div>
  	</div>
 </body>
