feat: Add app store link

--- a/natto.html
+++ b/natto.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <head>
 <title>oh! natto!</title>
+<link rel="stylesheet" type="text/css" href="app.css"></head>
 </head>
 <body>
 <p>oh!natto!</p>
+<a href="https://apps.apple.com/us/app/oh-natto/id1457049172"><img src="img/dl_appstore.png" width=220></a>
 </body>
 </html>
