--- a/ebifry.html
+++ b/ebifry.html
@@ -4,5 +4,6 @@
 </head>
 <body>
 <p>えびフライ</p>
+<a href="https://apps.apple.com/us/app/%E3%81%88%E3%81%B3%E3%83%95%E3%83%A9%E3%82%A4/id1461666071"><img src="img/dl_appstore.png" width=220></a>
 </body>
 </html>
