feat: Add natto page

--- a/natto.html
+++ b/natto.html
@@ -4,7 +4,20 @@
 <link rel="stylesheet" type="text/css" href="app.css"></head>
 </head>
 <body>
-<p>oh!natto!</p>
-<a href="https://apps.apple.com/us/app/oh-natto/id1457049172"><img src="img/dl_appstore.png" width=220></a>
+	
+	<div class="nattoHead">
+		<div class="empty"> 
+			<p><br><br><br><br></p>
+		</div>
+		<h1>oh!natto!</h1>
+		<h2>納豆の力で世界中をつなげる！</h2>
+		<h3>oh!natto!は納豆の疑似体験を<br>提供するアプリです</h3>
+		<p>納豆のにおいのせいで食べずに悪い印象を持ってしまっている方に、<br>好きになってほしいという気持ちで作ったアプリです！</p>
+		<a href="https://apps.apple.com/us/app/oh-natto/id1457049172"><img src="img/dl_appstore.png" width=220></a>
+	</div>
+	
+	<div class="appImage">
+		<img src="img/nattoTop.png" >
+	</div>
 </body>
 </html>
