feat: Add natto background image

--- a/natto.html
+++ b/natto.html
@@ -15,9 +15,16 @@
 		<p>納豆のにおいのせいで食べずに悪い印象を持ってしまっている方に、<br>好きになってほしいという気持ちで作ったアプリです！</p>
 		<a href="https://apps.apple.com/us/app/oh-natto/id1457049172"><img src="img/dl_appstore.png" width=220></a>
 	</div>
-	
 	<div class="appImage">
 		<img src="img/nattoTop.png" >
+	</div>
+	
+<!-- アプリ説明画面-->
+	<div class="description1">
+		<img src="img/nattoDescription2.JPG">
+	</div>
+	<div class="description2">
+		<img src="img/nattoDescription1.JPG">
 	</div>
 </body>
 </html>
