feat: Add top page in privacy policy link

--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -7,8 +7,8 @@
 	<body>
 		<h1>プライバシーポリシー</h1>
 		<h2>プライバシーポリシー</h2>
-			<p>inouefoodは「oh! natto!」を無料アプリとして作成しました。<br>本サービスは、inouefoodが無償で提供するものであり、そのまま使用することを目的としています。</p>
-			<p>このプライバシーポリシーは、スマートフォン向けアプリ「oh! natto!」に<br>おいて送信される利用者情報とその取り扱いについての説明です。<br><br>第三者に個人を特定できる情報を提供することはございません。<br>また、利用者の利用データを販売したりすることもございません。<br>個人情報の管理には細心の注意を払い、以下に掲げた通りに扱います。<br><br>本プライバシーポリシーの内容をご確認・ご理解頂いた上で本アプリをご利用下さい。<br><br>
+			<p>inouefoodは「oh! natto!」「えびフライ」を無料アプリとして作成しました。<br>本サービスは、inouefoodが無償で提供するものであり、そのまま使用することを目的としています。</p>
+			<p>このプライバシーポリシーは、スマートフォン向けアプリ「oh! natto!」「えびフライ」に<br>おいて送信される利用者情報とその取り扱いについての説明です。<br><br>第三者に個人を特定できる情報を提供することはございません。<br>また、利用者の利用データを販売したりすることもございません。<br>個人情報の管理には細心の注意を払い、以下に掲げた通りに扱います。<br><br>本プライバシーポリシーの内容をご確認・ご理解頂いた上で本アプリをご利用下さい。<br><br>
 			</p>
 		<h2>個人情報の第三者への開示</h2>
 			<p>等アプリは個人情報の収集、開示は一切おこないません。</p>
